# demo-tui-rs

./: Cargo.toml  README.md
src/: main.rs
src/app/: actions.rs  mod.rs  state.rs  ui.rs
src/inputs/: key.rs
src/io/: mod.rs
